--- a/style.css
+++ b/style.css
@@ -293,6 +293,7 @@ body {
       cursor: pointer;
       font-size: 1.2em;
       margin-top: 15px;
+      background-color: white;
     }
     
     .btn:hover {
